# eve-scanner-rust

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.codebuddy/: summary.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: app.yml
src-tauri/src/: lib.rs  main.rs  main_only_rust.rs
src-tauri/src/commands/: get_process_id.rs  mod.rs  process_watcher.rs
src-tauri/src/db/: database.rs  mod.rs  queries.rs
src-tauri/src/eve/: mod.rs  utils.rs
src-tauri/src/eve/interop/: mod.rs
src-tauri/src/eve/interop/gui/: mod.rs  windows_utils.rs
src-tauri/src/eve/interop/memory/: memory_reading_cache.rs  mod.rs  python_memory_reader.rs  python_type_extractor.rs  utils.rs  windows_memory_reader.rs
src-tauri/src/eve/interop/memory/models/: dict_entry.rs  dict_entry_representation.rs  int_wrapper.rs  memory_region.rs  mod.rs  py_dict_entry.rs
src-tauri/src/eve/interop/ui/: mod.rs  python_type_extractor.rs
src-tauri/src/eve/ui/: common.rs  directional_scanner_parser.rs  mod.rs  overview_window_parser.rs  parser_utils.rs  probe_scanner_parser.rs  ui_constants.rs
src-tauri/src/eve/ui/models/: child_of_node.rs  directional_scanner.rs  display_region.rs  general_window.rs  mod.rs  overview_window.rs  probe_scanner.rs  ui_tree_node.rs
src-tauri/src/eve/ui/utils/: display_region_utils.rs  mod.rs  utils.rs
src-tauri/src/eve/ui_tree_node/: common.rs  mod.rs  ui_constants.rs
src-tauri/src/eve/ui_tree_node/models/: child_of_node.rs  display_region.rs  mod.rs  ui_tree_node.rs
src-tauri/src/eve/ui_tree_node/utils/: display_region_utils.rs  utils.rs
src-tauri/src/operations/: eve_tracker.rs  eve_ui_tracker.rs  extract_possible_root_address.rs  gui_simulation.rs  mod.rs  obtain_pid_process.rs  ui_tree_node_extractor.rs
src-tauri/src/process/: mod.rs
src-tauri/src/process/interop/: mod.rs
src-tauri/src/process/interop/memory/: eve_python_utils.rs  memory_reading_cache.rs  memory_region.rs  memory_utils.rs  mod.rs  object_type.rs  python_memory_reader.rs  python_models.rs  windows_memory_reader.rs
src-tauri/src/process/interop/ui/: eve_python_utils.rs  int_wrapper.rs  mod.rs  python_ui_utils.rs  ui_tree_node.rs
src-tauri/src/process/interop/windows/: mod.rs  windows_interop_models.rs
src/components/: EveBotScreen.vue  EveProcessComponent.vue  Greet.vue
src/features/eveui/: OverViewPlayerDetector.ts  UiEvent.ts  UiManager.ts  UiModel.ts  uiEventStore.ts
src/models/: EveProcessModel.ts
src/router/: index.ts
src/services/: tauriCommands.ts
