[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2.6.0"
log = "0.4.22"
sysinfo = "0.31.2"
rayon = "1.10.0"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","winnt","winbase","processthreadsapi","memoryapi","handleapi","minwindef","basetsd"] }